<resources>
    <string name="app_name">Checkin_guest</string>
    <string name="main_ment1">어디로 떠나야 할 지 모르겠다면?</string>
    <string name="main_ment2">인기많은 숙소는?</string>
    <string name="search_ment1">숙소 또는 여행지를 입력해주세요</string>
    <string name="search_ment2">날짜를 선택하세요</string>
    <string name="reservation_ment">예약날짜를 선택하세요</string>
    <string name="search_year">년</string>
    <string name="search_month">월</string>
    <string name="search_date">일</string>
    <string name="search_period">~</string>
    <string name="search_ment3">숙소 유형</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="service_name">smartcard</string>
    <string name="aiddescription">card_aid</string>
    <!--달력     -->
    <string-array name="custom_weekdays">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>
    <string-array name="custom_months">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>
</resources>