<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/radius_search">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans"
                android:text="@string/search_ment2"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.023" />

            <LinearLayout
                android:id="@+id/linear_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/txt_startYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosans"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_search_text"
                    android:fontFamily="@font/notosans"
                    android:gravity="center"
                    android:text="@string/search_year" />

                <TextView
                    android:id="@+id/txt_startMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosans"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_search_text"
                    android:fontFamily="@font/notosans"
                    android:gravity="center"
                    android:text="@string/search_month" />

                <TextView
                    android:id="@+id/txt_startDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosans"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_search_text"
                    android:fontFamily="@font/notosans"
                    android:gravity="center"
                    android:text="@string/search_date" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_search_text"
                    android:fontFamily="@font/notosans"
                    android:text="@string/search_period" />

                <TextView
                    android:id="@+id/txt_endYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosans"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_search_text"
                    android:fontFamily="@font/notosans"
                    android:gravity="center"
                    android:text="@string/search_year" />

                <TextView
                    android:id="@+id/txt_endMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosans"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_search_text"
                    android:fontFamily="@font/notosans"
                    android:gravity="center"
                    android:text="@string/search_month" />

                <TextView
                    android:id="@+id/txt_endDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosans"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosans"
                    android:gravity="center"
                    android:text="@string/search_date" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>